# monkeypaint

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  setup.cfg
src/monkeypaint/: __init__.py  __main__.py  colorapi.py
