[metadata]
# See <https://setuptools.readthedocs.io/en/stable/references/keywords.html>
name = monkeypaint
version = 1.0.1
description = Generate color palettes for Kinesis Freestyle Edge keyboards
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/brettcs/monkeypaint
author = Brett Smith
author_email = brettcsmith@brettcsmith.org
license = GNU Affero General Public License version 3
# license_files is a list of glob patterns
license_files = LICENSE.txt
project_urls =
  Documentation = %(url)s
  Source = %(url)s
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Topic :: System :: Hardware
  Typing :: Typed

[options]
packages = find:
package_dir =
  =src
include_package_data = True
install_requires =
  appdirs>=1.4.1
  requests>=2.20
python_requires = >=3.9

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
  monkeypaint = monkeypaint.__main__:entry_point

[options.package_data]
* = py.typed

[options.packages.find]
# See <https://setuptools.readthedocs.io/en/stable/userguide/package_discovery.html>
where = src

[testenv]
deps =
  mypy>=0.800
  types-requests
commands =
  mypy src
  monkeypaint --help

[tox:tox]
# Comma-separated list of Python version(s) tox should run tests in.
envlist = py39
